--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -124,24 +124,20 @@ div.menubutton {
 
 }
 
-.presentationtable tr:nth-child(odd):hover, .presentationtable tr:nth-child(even):hover{
-    background-color: #ffffff;
-}
-
 .presentationtable tr:nth-child(odd){
-    background-color: #d8d8d8;
+    background-color: #BA55D3;
 }
 
 
 .presentationtable tr:nth-child(even){
-    background-color: #e5e3e3;
+    background-color: #BA55D3;
 }
 
 .presentationtable td{
 	vertical-align:middle;
 	border:0px solid #000000;
 	border-width:0px 0px 0px 0px;
-	text-align:left;
+	text-align:center;
 	padding:7px;
 	font-size: 10px;
 	font-family: Arial;
@@ -162,7 +158,7 @@ div.menubutton {
 }
 
 .presentationtable tr:first-child td, .tableheader{
-	background-color: #707070;
+	background-color: #C71585;
 	border:0px solid #000000;
 	text-align: center;
 	border-width: 0px 0px 0px 0px;
@@ -170,7 +166,9 @@ div.menubutton {
 	font-family: Arial;
 	font-weight: bold;
 	color: #ffffff;
+
 }
+
 
 .presentationtable tr:first-child td:first-child{
 	border-width:0px 0px 0px 0px;
@@ -188,6 +186,9 @@ div.menubutton {
     margin: 0 auto;
 }
 
+.opbutton{
+margin: 0 auto;
+}
 
 .operationtable{
     width: 10%;
@@ -195,24 +196,9 @@ div.menubutton {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
-    background-color: #d8d8d8;
+    background-color: #FFEBCD;
     border: 1px solid #707070;
     box-shadow: 0px 0px 5px #888888;
     text-align: center;
 }
 
-
-.successbox{
-    border-style: solid;
-    border-color: #47B224;
-    border-width: 1px;
-    background: #B2FF99;
-    align: center;
-    /*margin: 0px;*/
-    text-align: center;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 35px;
-    width: 300px;
-}
